--- a/DemoNumpy.ipynb
+++ b/DemoNumpy.ipynb
@@ -447,6 +447,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ac', 'bd'], dtype='<U2')"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#문자열 처리 \n",
+    "import numpy as np \n",
+    "\n",
+    "a = np.array([\"a\",\"b\"])\n",
+    "b = np.array([\"c\",\"d\"])\n",
+    "np.char.add(a,b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['aaaaa', 'bbbbbbbbbb'], dtype='<U10')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([\"a\",\"b\"])\n",
+    "b = np.array([5,10])\n",
+    "np.char.multiply(a,b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
