--- a/Pandas03_그룹핑과통계데이터다루기.ipynb
+++ b/Pandas03_그룹핑과통계데이터다루기.ipynb
@@ -6,20 +6,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_17108\\2995416522.py:2: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  from pandas import Series, DataFrame\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -51,36 +37,36 @@
        "      <th>0</th>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
-       "      <td>-1.541419</td>\n",
-       "      <td>1.139688</td>\n",
+       "      <td>0.013342</td>\n",
+       "      <td>0.594921</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>a</td>\n",
        "      <td>two</td>\n",
-       "      <td>0.170169</td>\n",
-       "      <td>1.914866</td>\n",
+       "      <td>-1.056507</td>\n",
+       "      <td>0.736810</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>b</td>\n",
        "      <td>one</td>\n",
-       "      <td>0.478558</td>\n",
-       "      <td>1.151265</td>\n",
+       "      <td>-1.775699</td>\n",
+       "      <td>-0.020072</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>b</td>\n",
        "      <td>two</td>\n",
-       "      <td>-0.380784</td>\n",
-       "      <td>-0.365598</td>\n",
+       "      <td>-1.417404</td>\n",
+       "      <td>-1.311032</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
-       "      <td>1.275307</td>\n",
-       "      <td>-2.682036</td>\n",
+       "      <td>1.550575</td>\n",
+       "      <td>-2.025711</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -88,11 +74,11 @@
       ],
       "text/plain": [
        "  key1 key2     data1     data2\n",
-       "0    a  one -1.541419  1.139688\n",
-       "1    a  two  0.170169  1.914866\n",
-       "2    b  one  0.478558  1.151265\n",
-       "3    b  two -0.380784 -0.365598\n",
-       "4    a  one  1.275307 -2.682036"
+       "0    a  one  0.013342  0.594921\n",
+       "1    a  two -1.056507  0.736810\n",
+       "2    b  one -1.775699 -0.020072\n",
+       "3    b  two -1.417404 -1.311032\n",
+       "4    a  one  1.550575 -2.025711"
       ]
      },
      "execution_count": 1,
@@ -120,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x000002315E562F50>"
+       "<pandas.core.groupby.generic.SeriesGroupBy object at 0x00000220A42B7550>"
       ]
      },
      "execution_count": 2,
@@ -143,12 +129,12 @@
      "output_type": "stream",
      "text": [
       "key1\n",
-      "a   -0.031981\n",
-      "b    0.048887\n",
+      "a    0.169137\n",
+      "b   -1.596551\n",
       "Name: data1, dtype: float64\n",
       "key1\n",
-      "a   -0.095943\n",
-      "b    0.097774\n",
+      "a    0.507410\n",
+      "b   -3.193103\n",
       "Name: data1, dtype: float64\n",
       "key1\n",
       "a    3\n",
@@ -172,10 +158,10 @@
      "data": {
       "text/plain": [
        "key1  key2\n",
-       "a     one    -0.133056\n",
-       "      two     0.170169\n",
-       "b     one     0.478558\n",
-       "      two    -0.380784\n",
+       "a     one     0.781959\n",
+       "      two    -1.056507\n",
+       "b     one    -1.775699\n",
+       "      two    -1.417404\n",
        "Name: data1, dtype: float64"
       ]
      },
@@ -191,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +262,7 @@
        "4   1  김길동   80  89   80"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,49 +281,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "465"
+       "446"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#합계\n",
-    "sum(dfClass[\"국어\"])"
+    "sum(dfClass[\"영어\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "93.0"
+       "89.2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#평균\n",
-    "sum(dfClass[\"국어\"])/5"
+    "sum(dfClass[\"영어\"])/5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -422,13 +408,14 @@
        "3   2  박문수  100  92  100"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#오름차순\n",
+    "#dfClass.sort_index() \n",
     "dfClass.sort_values(\"국어\")"
    ]
   },
@@ -531,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +635,7 @@
        "4   1  김길동   80  89   80  249  83.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -822,24 +809,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>수학평균</th>\n",
-       "      <td>88.4</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        수학\n",
-       "수학평균  88.4"
+       "      수학\n",
+       "수학평균   5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfClass.agg(수학평균=(\"수학\",\"mean\"))"
+    "dfClass.agg(수학평균=(\"수학\",\"count\"))"
    ]
   },
   {
