--- a/Pandas04_필터링사용하기.ipynb
+++ b/Pandas04_필터링사용하기.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "036360  3SOFT  1790  1.65"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,6 +74,7 @@
     "columns = [\"종목명\", \"현재가\", \"등락률\"]\n",
     "df = DataFrame(data=data, \n",
     "    index=index, columns=columns)\n",
+    "#df \n",
     "cond = df['현재가'] >= 1400\n",
     "\n",
     "df.loc[cond]"
@@ -81,42 +82,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "          종목명   현재가   등락률\n",
+      "037730     3R  1510  7.36\n",
+      "036360  3SOFT  1790  1.65\n",
       "037730    1510\n",
       "036360    1790\n",
       "Name: 현재가, dtype: int64\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "037730    1510\n",
-       "036360    1790\n",
-       "Name: 현재가, dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#반환된 데이터프레임에서 하나의 컬럼만 가져오고 싶다면\n",
     "#컬럼의 이름으로 인덱싱을 할 수 있다.\n",
     "cond = df[\"현재가\"] >= 1400\n",
-    "print(df.loc[cond][\"현재가\"])\n",
-    "df.loc[cond, \"현재가\"]"
+    "print(df.loc[cond])\n",
+    "print(df.loc[cond, \"현재가\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +153,7 @@
        "037730  3R  1510  7.36"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +229,7 @@
        "005760   ACTS  1185  1.28  1600"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +328,7 @@
        "005760   ACTS  1185  1.28  1600  1600  0.350211"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +413,7 @@
        "066570   LG전자  60000  3.84"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +506,7 @@
        "066570   LG전자  60000  3.84"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +594,7 @@
        "A054620  APS홀딩스  3120   3200"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +682,7 @@
        "A054620  APS홀딩스  3120   3200"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -711,21 +703,18 @@
      "text": [
       "         nm  open  close\n",
       "cd                      \n",
-      "A060310  3S  2920   2800\n",
-      "         nm  open  close\n",
-      "cd                      \n",
       "A060310  3S  2920   2800\n"
      ]
     }
    ],
    "source": [
     "print(df.query(\"nm=='3S'\"))\n",
-    "print(df.query('nm==\"3S\"'))\n"
+    "#print(df.query('nm==\"3S\"'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +780,7 @@
        "A006840   AK홀딩스  2020   2010"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +851,7 @@
        "A006840  AK홀딩스  2020   2010"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +926,7 @@
        "PBR     1.10     1.49     2.06        1.88"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1004,7 @@
        "PBR     1.10"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1063,7 @@
        "PER     6.42    17.63    21.09       13.93"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1111,46 +1100,46 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>2020/12</th>\n",
+       "      <th>2019/12</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>DPS</th>\n",
-       "      <td>2994.00</td>\n",
+       "      <td>1416.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PER</th>\n",
-       "      <td>21.09</td>\n",
+       "      <td>17.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PBR</th>\n",
-       "      <td>2.06</td>\n",
+       "      <td>1.49</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     2020/12\n",
-       "DPS  2994.00\n",
-       "PER    21.09\n",
-       "PBR     2.06"
+       "     2019/12\n",
+       "DPS  1416.00\n",
+       "PER    17.63\n",
+       "PBR     1.49"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#정규표현식을 사용할 수 있다. \n",
-    "df.filter(regex=\"2020\")"
+    "df.filter(regex=\"2019\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1174,46 +1163,46 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>2020/12</th>\n",
+       "      <th>2019/12</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>DPS</th>\n",
-       "      <td>2994.00</td>\n",
+       "      <td>1416.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PER</th>\n",
-       "      <td>21.09</td>\n",
+       "      <td>17.63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PBR</th>\n",
-       "      <td>2.06</td>\n",
+       "      <td>1.49</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     2020/12\n",
-       "DPS  2994.00\n",
-       "PER    21.09\n",
-       "PBR     2.06"
+       "     2019/12\n",
+       "DPS  1416.00\n",
+       "PER    17.63\n",
+       "PBR     1.49"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#시작패턴을 지정 \n",
-    "df.filter(regex=\"^2020\")"
+    "df.filter(regex=\"^2019\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1257,7 @@
        "PBR     1.10     1.49     2.06        1.88"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1328,7 @@
        "PBR     1.10     1.49     2.06"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1373,7 +1362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
